--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/scss/bootstrap.scss",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "./node_modules/@ng-select/ng-select/themes/default.theme.css",
