--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.10.2",
     "jquery": "^3.6.1",
     "material-icons": "^1.12.2",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "ts-md5": "^1.3.1",
